# TermLab

./: .gitattributes  .gitignore  ANDROID_REF  BUILD.bazel  INTELLIJ_REF  Makefile  README.md  setup.sh
core/: BUILD.bazel
core/resources/: termlab-dark.xml
core/resources/colorSchemes/: ConchDark.xml  TermLabDark.xml
core/resources/themes/: Conch.theme.json  TermLabDark.theme.json  TermLabLight.theme.json  termlab-flow-day.xml
core/resources/tips/: TermLabDisablePlugins.html  TermLabMultiExec.html  TermLabNewTerminalWindow.html  TermLabUndockPlugins.html
core/src/com/conch/core/: ConchBuiltInThemeStripper.java  ConchDefenderNotifierSuppressor.java  ConchEditorSettingsStripper.java  ConchEmptyTextPainter.java  ConchHomeDirNoProjectHandler.kt  ConchMacDockIconCustomizer.java  ConchProjectCloseListener.java  ConchProjectFrameCapabilitiesProvider.java  ConchRefactoringStripper.java  ConchStartupActivity.java  ConchThemeSyncCustomizer.java  ConchToolWindowCustomizer.java  ConchToolWindowStripper.java  ConchToolbarStripper.java
core/src/com/conch/core/actions/: CloseTerminalTabAction.java  ConchActionConfigurationCustomizer.java  DirectionalTerminalNavigationAction.java  FocusTerminalDownAction.java  FocusTerminalLeftAction.java  FocusTerminalRightAction.java  FocusTerminalUpAction.java  LoadWorkspaceAction.java  NewTerminalTabAction.java  NoopExecutorStubAction.java  OpenMiniWindowAction.java  RenameTerminalTabAction.java  SaveWorkspaceAction.java  SplitTerminalHorizontalAction.java  SplitTerminalVerticalAction.java
core/src/com/conch/core/editor/: FirstLaunchEditorNotifier.java
core/src/com/conch/core/explorer/: CwdSyncManager.java
core/src/com/conch/core/filepicker/: FileEntry.java  FilePickerResult.java  FileSource.java  FileSourceProvider.java  LocalFileEntry.java  LocalFileSource.java  LocalFileSourceProvider.java
core/src/com/conch/core/miniwindow/: MiniTerminalWindow.java
core/src/com/conch/core/palette/: ConchSearchEverywhereCustomizer.java  ConchSearchEverywhereLocationPinner.java  ConchTabsCustomizationStrategy.java  TerminalPaletteContributor.java
core/src/com/conch/core/settings/: ConchSearchableOptionContributor.java  ConchTerminalAppearanceConfigurable.java  ConchTerminalConfig.java  ConchTerminalConfigurable.java  ConchTerminalTerminalConfigurable.java  ConchWorkbenchConfigurable.java  LightEditorConfigurable.java
core/src/com/conch/core/terminal/: ConchEditorTabTitleProvider.java  ConchTabBarManager.java  ConchTerminalEditor.java  ConchTerminalEditorProvider.java  ConchTerminalFileType.java  ConchTerminalOnlyFileEditorListener.java  ConchTerminalSettings.java  ConchTerminalStarter.java  ConchTerminalVirtualFile.java  ConchTerminalWidget.java  ForegroundProcessPoller.java  LocalPtySessionProvider.java  OscTrackingTtyConnector.java
core/src/com/conch/core/workspace/: WorkspaceManager.java  WorkspaceSerializer.java  WorkspaceState.java
core/src/com/intellij/execution/testframework/: TestTreeViewActionsPromoter.java
core/src/com/termlab/core/: DisabledBookmarksManager.java  TermLabBuiltInThemeStripper.java  TermLabColorAndFontOptions.java  TermLabCompactModeCustomizer.java  TermLabConsoleFontCustomizer.java  TermLabDefaultToolWindowLayout.kt  TermLabDefenderNotifierSuppressor.java  TermLabEditorSettingsStripper.java  TermLabEmptyTextPainter.java  TermLabExternalProductResourceUrls.kt  TermLabFileWatcherDisabler.java  TermLabHomeDirNoProjectHandler.kt  TermLabMacDockIconCustomizer.java  TermLabProjectCloseListener.java  TermLabProjectFrameCapabilitiesProvider.java  TermLabRefactoringStripper.java  TermLabRunAnythingStripper.java  TermLabStartupActivity.java  TermLabThemeSyncCustomizer.java  TermLabThirdPartyLicenseFiles.java  TermLabThirdPartyLicenseFilesSync.java  TermLabTipsStartupActivity.kt  TermLabToolWindowCustomizer.java  TermLabToolWindowStripper.java  TermLabToolbarStripper.java  TestRunner.java
core/src/com/termlab/core/actions/: CloseTerminalTabAction.java  DirectionalTerminalNavigationAction.java  DisableTerminalFromMultiExecAction.java  EnableTerminalForMultiExecAction.java  ExitMultiExecAction.java  FocusTerminalDownAction.java  FocusTerminalLeftAction.java  FocusTerminalRightAction.java  FocusTerminalUpAction.java  LoadWorkspaceAction.java  MultiExecActionSupport.java  NewTerminalPopOutAction.java  NewTerminalTabAction.java  NoopExecutorStubAction.java  PopOutTerminalTabAction.java  RenameTerminalTabAction.java  SaveWorkspaceAction.java  SelectTerminalTabByNumberAction.java  SplitTerminalHorizontalAction.java  SplitTerminalVerticalAction.java  TermLabActionConfigurationCustomizer.java  TerminalSplitSupport.java  ToggleDistractionFreeModeShortcutAction.java
core/src/com/termlab/core/explorer/: CwdSyncManager.java
core/src/com/termlab/core/filepicker/: FileEntry.java  FilePickerResult.java  FileSource.java  FileSourceProvider.java  LocalFileEntry.java  LocalFileSource.java  LocalFileSourceProvider.java
core/test/com/conch/core/: TestRunner.java
customization/: BUILD.bazel  version.properties
customization/licenses/: GitForWindows.txt
customization/resources/: conch.icns
customization/resources/idea/: ConchApplicationInfo.xml  TermLabApplicationInfo.xml
customization/resources/mac/: dmg_background.tiff
customization/resources/messages/: TestRunnerBundle.properties
customization/third-party-libraries/: third-party-libraries.html  third-party-libraries.json
plugins/editor/: BUILD.bazel
plugins/minecraft-admin/: BUILD.bazel
plugins/proxmox/: BUILD.bazel
plugins/runner/: BUILD.bazel
plugins/search/: BUILD.bazel
plugins/sftp/: BUILD.bazel
plugins/sftp/libs/: BUILD.bazel  README.md
plugins/share/: BUILD.bazel
plugins/ssh/: BUILD.bazel
plugins/sysinfo/: BUILD.bazel
plugins/tunnels/: BUILD.bazel
plugins/vault/: BUILD.bazel
sdk/: BUILD.bazel
sdk/src/com/conch/sdk/: CommandPaletteContributor.java  CredentialProvider.java  PaletteItem.java  TerminalSessionProvider.java
sdk/src/com/termlab/sdk/: CredentialProvider.java  TerminalSessionProvider.java
(+738 files in other folders)
