load("@rules_java//java:defs.bzl", "java_binary")

# Run Conch from the command line.
# Depends on the platform monolith (no product plugins) plus only
# the specific modules and plugins Conch needs. No Java, VCS, Gradle,
# AI, or other IDE plugins are included.
java_binary(
    name = "conch_run",
    runtime_deps = [
        # Platform core runtime (no product plugins)
        "//platform/main/intellij.platform.monolith.main:monolith-main",
        "//platform/boot",
        "//platform/bootstrap",
        "//platform/starter",

        # Conch modules
        "//conch/customization",
        "//conch/core",
        "//conch/sdk",

        # Conch bundled plugins (first-party, always enabled)
        "//conch/plugins/vault",

        # IntelliJ-platform bundled plugins — ONLY these exist in Conch
        "//plugins/classic-ui",
        "//plugins/sh/plugin",
        "//plugins/textmate",
        "//plugins/yaml",
        "//plugins/toml",
        "//json",
        "//plugins/search-everywhere-ml",
    ],
    main_class = "com.intellij.idea.Main",
    jvm_flags = [
        "--add-opens=java.base/java.io=ALL-UNNAMED",
        "--add-opens=java.base/java.lang=ALL-UNNAMED",
        "--add-opens=java.base/java.lang.ref=ALL-UNNAMED",
        "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
        "--add-opens=java.base/java.net=ALL-UNNAMED",
        "--add-opens=java.base/java.nio=ALL-UNNAMED",
        "--add-opens=java.base/java.nio.charset=ALL-UNNAMED",
        "--add-opens=java.base/java.text=ALL-UNNAMED",
        "--add-opens=java.base/java.time=ALL-UNNAMED",
        "--add-opens=java.base/java.util=ALL-UNNAMED",
        "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
        "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
        "--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED",
        "--add-opens=java.base/jdk.internal.vm=ALL-UNNAMED",
        "--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED",
        "--add-opens=java.base/sun.net.dns=ALL-UNNAMED",
        "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
        "--add-opens=java.base/sun.nio.fs=ALL-UNNAMED",
        "--add-opens=java.base/sun.security.ssl=ALL-UNNAMED",
        "--add-opens=java.base/sun.security.util=ALL-UNNAMED",
        "--add-opens=java.desktop/com.apple.eawt=ALL-UNNAMED",
        "--add-opens=java.desktop/com.apple.eawt.event=ALL-UNNAMED",
        "--add-opens=java.desktop/com.apple.laf=ALL-UNNAMED",
        "--add-opens=java.desktop/com.sun.java.swing=ALL-UNNAMED",
        "--add-opens=java.desktop/com.sun.java.swing.plaf.gtk=ALL-UNNAMED",
        "--add-opens=java.desktop/java.awt=ALL-UNNAMED",
        "--add-opens=java.desktop/java.awt.dnd.peer=ALL-UNNAMED",
        "--add-opens=java.desktop/java.awt.event=ALL-UNNAMED",
        "--add-opens=java.desktop/java.awt.font=ALL-UNNAMED",
        "--add-opens=java.desktop/java.awt.image=ALL-UNNAMED",
        "--add-opens=java.desktop/java.awt.peer=ALL-UNNAMED",
        "--add-opens=java.desktop/javax.swing=ALL-UNNAMED",
        "--add-opens=java.desktop/javax.swing.plaf.basic=ALL-UNNAMED",
        "--add-opens=java.desktop/javax.swing.text=ALL-UNNAMED",
        "--add-opens=java.desktop/javax.swing.text.html=ALL-UNNAMED",
        "--add-opens=java.desktop/javax.swing.text.html.parser=ALL-UNNAMED",
        "--add-opens=java.desktop/sun.awt=ALL-UNNAMED",
        "--add-opens=java.desktop/sun.awt.X11=ALL-UNNAMED",
        "--add-opens=java.desktop/sun.awt.datatransfer=ALL-UNNAMED",
        "--add-opens=java.desktop/sun.awt.image=ALL-UNNAMED",
        "--add-opens=java.desktop/sun.awt.windows=ALL-UNNAMED",
        "--add-opens=java.desktop/sun.font=ALL-UNNAMED",
        "--add-opens=java.desktop/sun.java2d=ALL-UNNAMED",
        "--add-opens=java.desktop/sun.lwawt=ALL-UNNAMED",
        "--add-opens=java.desktop/sun.lwawt.macosx=ALL-UNNAMED",
        "--add-opens=java.desktop/sun.swing=ALL-UNNAMED",
        "--add-opens=java.desktop/sun.swing.text=ALL-UNNAMED",
        "--add-opens=java.management/sun.management=ALL-UNNAMED",
        "--add-opens=jdk.attach/sun.tools.attach=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
        "--add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED",
        "--add-opens=jdk.jdi/com.sun.tools.jdi=ALL-UNNAMED",
        "-Didea.home.path=$${BUILD_WORKSPACE_DIRECTORY}",
        "-Xmx2g",
        "-XX:MaxJavaStackTraceDepth=10000",
        "-XX:+IgnoreUnrecognizedVMOptions",
        "-ea",
        "-Dsun.io.useCanonCaches=false",
        "-Dsun.awt.disablegrab=true",
        "-Dsun.java2d.metal=true",
        "-Dapple.laf.useScreenMenuBar=true",
        "-Dapple.awt.application.icon=$${BUILD_WORKSPACE_DIRECTORY}/conch/customization/resources/conch.icns",
        "-Djdk.attach.allowAttachSelf",
        "-Djdk.module.illegalAccess.silent=true",
        "-DjbScreenMenuBar.enabled=true",
        "-Didea.jre.check=true",
        "-Didea.is.internal=true",
        "-Didea.debug.mode=true",
        # Disable file indexing globally in Conch (terminal-first product).
        "-Didea.indexes.pretendNoFiles=true",
        # Never auto-open Project View during startup in Conch.
        "-Dide.open.project.view.on.startup=false",
        "-Didea.platform.prefix=Conch",
        "-Didea.config.path=$${BUILD_WORKSPACE_DIRECTORY}/config/conch",
        "-Didea.system.path=$${BUILD_WORKSPACE_DIRECTORY}/system/conch",
        "-Didea.trust.all.projects=true",
        "-Dnosplash=true",
        "-Dide.no.tips.dialog=true",
        "-Dfus.internal.test.mode=true",
        # Use Classic UI by default (disable new UI)
        "-Dide.experimental.ui=false",
        # Default to Darcula (dark) theme for new installations
        "-Dlaf.name.for.new.installation=Darcula",
    ],
)
