load("@rules_java//java:defs.bzl", "java_binary")
load("@rules_jvm//:jvm.bzl", "jvm_library")

# Roll-up module matching intellij.termlab.main.iml. No own sources —
# it exists so the JPS-to-Bazel targets mapping can resolve
# @community//termlab:termlab-main.jar, which the platform installer
# build pipeline references via ALL_COMMUNITY_TARGETS.
jvm_library(
    name = "termlab-main",
    module_name = "intellij.termlab.main",
    visibility = ["//visibility:public"],
    srcs = glob([], allow_empty = True),
    runtime_deps = [
        "//platform/main/intellij.platform.monolith.main:monolith-main",
        "//platform/bootstrap",
        "//platform/starter",
        "//termlab/customization",
        "//termlab/core",
        "//termlab/sdk",
        "//plugins/classic-ui",
    ],
)

jvm_library(
    name = "termlab-main_test_lib",
    module_name = "intellij.termlab.main",
    visibility = ["//visibility:public"],
    srcs = glob([], allow_empty = True),
    runtime_deps = [":termlab-main"],
)

exports_files(["intellij.termlab.main.iml"])

# Run TermLab from the command line.
# Depends on the platform monolith (no product plugins) plus only
# the specific modules and plugins TermLab needs. No Java, VCS, Gradle,
# AI, or other IDE plugins are included.
java_binary(
    name = "termlab_run",
    runtime_deps = [
        # Platform core runtime (no product plugins)
        "//platform/main/intellij.platform.monolith.main:monolith-main",
        "//platform/boot",
        "//platform/bootstrap",
        "//platform/starter",

        # TermLab modules
        "//termlab/customization",
        "//termlab/core",
        "//termlab/sdk",

        # TermLab bundled plugins (first-party, always enabled)
        "//termlab/plugins/vault",
        "//termlab/plugins/ssh",
        "//termlab/plugins/tunnels",
        "//termlab/plugins/share",
        "//termlab/plugins/sftp",
        "//termlab/plugins/search",
        # Light editor: scratch files + SFTP-triggered file editing.
        "//termlab/plugins/editor",
        # Script runner: lightweight script execution on local/remote hosts.
        "//termlab/plugins/runner",
        # Runtime implementation of PasswordSafe — required by the vault
        # plugin so it can store the device secret in the cross-platform
        # credential store (Keychain / Credential Manager / KWallet /
        # libsecret / encrypted file fallback).
        "//platform/credential-store-impl:credentialStore-impl",

        # IntelliJ-platform bundled plugins — ONLY these exist in TermLab
        "//plugins/classic-ui",
        "//json",
        # Required by the editor plugin for grammar-based syntax
        # highlighting.  The /plugin target is a thin descriptor-only
        # wrapper (META-INF/plugin.xml + icon); the implementation
        # modules must be listed explicitly so their JARs reach the
        # classpath and TextMate can load its built-in bundles.
        "//plugins/textmate/plugin",
        "//plugins/textmate:textmate",          # TextMateServiceImpl + file-type/language support
        "//plugins/textmate/common:common",     # intellij.textmate.common module descriptor
        "//plugins/textmate/backend:backend",   # settings UI + indexing integration (optional but declared in plugin.xml)
    ],
    main_class = "com.intellij.idea.Main",
    jvm_flags = [
        "--add-opens=java.base/java.io=ALL-UNNAMED",
        "--add-opens=java.base/java.lang=ALL-UNNAMED",
        "--add-opens=java.base/java.lang.ref=ALL-UNNAMED",
        "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
        "--add-opens=java.base/java.net=ALL-UNNAMED",
        "--add-opens=java.base/java.nio=ALL-UNNAMED",
        "--add-opens=java.base/java.nio.charset=ALL-UNNAMED",
        "--add-opens=java.base/java.text=ALL-UNNAMED",
        "--add-opens=java.base/java.time=ALL-UNNAMED",
        "--add-opens=java.base/java.util=ALL-UNNAMED",
        "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
        "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
        "--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED",
        "--add-opens=java.base/jdk.internal.vm=ALL-UNNAMED",
        "--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED",
        "--add-opens=java.base/sun.net.dns=ALL-UNNAMED",
        "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
        "--add-opens=java.base/sun.nio.fs=ALL-UNNAMED",
        "--add-opens=java.base/sun.security.ssl=ALL-UNNAMED",
        "--add-opens=java.base/sun.security.util=ALL-UNNAMED",
        "--add-opens=java.desktop/com.apple.eawt=ALL-UNNAMED",
        "--add-opens=java.desktop/com.apple.eawt.event=ALL-UNNAMED",
        "--add-opens=java.desktop/com.apple.laf=ALL-UNNAMED",
        "--add-opens=java.desktop/com.sun.java.swing=ALL-UNNAMED",
        "--add-opens=java.desktop/com.sun.java.swing.plaf.gtk=ALL-UNNAMED",
        "--add-opens=java.desktop/java.awt=ALL-UNNAMED",
        "--add-opens=java.desktop/java.awt.dnd.peer=ALL-UNNAMED",
        "--add-opens=java.desktop/java.awt.event=ALL-UNNAMED",
        "--add-opens=java.desktop/java.awt.font=ALL-UNNAMED",
        "--add-opens=java.desktop/java.awt.image=ALL-UNNAMED",
        "--add-opens=java.desktop/java.awt.peer=ALL-UNNAMED",
        "--add-opens=java.desktop/javax.swing=ALL-UNNAMED",
        "--add-opens=java.desktop/javax.swing.plaf.basic=ALL-UNNAMED",
        "--add-opens=java.desktop/javax.swing.text=ALL-UNNAMED",
        "--add-opens=java.desktop/javax.swing.text.html=ALL-UNNAMED",
        "--add-opens=java.desktop/javax.swing.text.html.parser=ALL-UNNAMED",
        "--add-opens=java.desktop/sun.awt=ALL-UNNAMED",
        "--add-opens=java.desktop/sun.awt.X11=ALL-UNNAMED",
        "--add-opens=java.desktop/sun.awt.datatransfer=ALL-UNNAMED",
        "--add-opens=java.desktop/sun.awt.image=ALL-UNNAMED",
        "--add-opens=java.desktop/sun.awt.windows=ALL-UNNAMED",
        "--add-opens=java.desktop/sun.font=ALL-UNNAMED",
        "--add-opens=java.desktop/sun.java2d=ALL-UNNAMED",
        "--add-opens=java.desktop/sun.lwawt=ALL-UNNAMED",
        "--add-opens=java.desktop/sun.lwawt.macosx=ALL-UNNAMED",
        "--add-opens=java.desktop/sun.swing=ALL-UNNAMED",
        "--add-opens=java.desktop/sun.swing.text=ALL-UNNAMED",
        "--add-opens=java.management/sun.management=ALL-UNNAMED",
        "--add-opens=jdk.attach/sun.tools.attach=ALL-UNNAMED",
        "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
        "--add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED",
        "--add-opens=jdk.jdi/com.sun.tools.jdi=ALL-UNNAMED",
        "-Didea.home.path=$${BUILD_WORKSPACE_DIRECTORY}",
        # Cap heap for terminal-first idle footprint and keep initial heap
        # small so idle RSS doesn't start oversized.
        "-Xms128m",
        "-Xmx1024m",
        # Default code cache tends to be large for a terminal-first product.
        # Keep enough room for JIT without over-reserving native memory.
        "-XX:ReservedCodeCacheSize=240m",
        "-XX:MaxJavaStackTraceDepth=10000",
        "-XX:+IgnoreUnrecognizedVMOptions",
        # Pin UTF-8 for file / stdout / stderr. Mirrors
        # TermLabProperties.additionalVmOptions in the installer build
        # so dev runs and shipped artifacts behave identically.
        "-Dfile.encoding=UTF-8",
        "-Dstdout.encoding=UTF-8",
        "-Dstderr.encoding=UTF-8",
        "-Dsun.io.useCanonCaches=false",
        "-Dsun.awt.disablegrab=true",
        "-Dsun.java2d.metal=true",
        "-Dapple.laf.useScreenMenuBar=true",
        "-Dapple.awt.application.icon=$${BUILD_WORKSPACE_DIRECTORY}/termlab/customization/resources/termlab.icns",
        "-Djdk.attach.allowAttachSelf",
        "-Djdk.module.illegalAccess.silent=true",
        "-DjbScreenMenuBar.enabled=true",
        "-Didea.jre.check=true",
        # Disable file indexing globally in TermLab (terminal-first product).
        "-Didea.indexes.pretendNoFiles=true",
        # Disable the native file watcher entirely. TermLab has no
        # project indexing so fsnotifier provides zero value, and on
        # Linux it trips an "inotify watch limit reached" balloon on
        # any user whose fs.inotify.max_user_watches is at distro
        # defaults. NativeFileWatcherImpl checks this property before
        # starting fsnotifier and bails out when set.
        "-Didea.filewatcher.disabled=true",
        # Never auto-open Project View during startup in TermLab.
        "-Dide.open.project.view.on.startup=false",
        "-Didea.platform.prefix=TermLab",
        "-Didea.config.path=$${BUILD_WORKSPACE_DIRECTORY}/config/termlab",
        "-Didea.system.path=$${BUILD_WORKSPACE_DIRECTORY}/system/termlab",
        "-Didea.trust.all.projects=true",
        "-Dsplash=true",
        "-Dide.no.tips.dialog=true",
        # Disable telemetry metric exporters and statistics collection for
        # terminal-first TermLab dev sessions to reduce idle CPU/background work.
        "-Didea.diagnostic.opentelemetry.metrics.file=",
        "-Didea.diagnostic.opentelemetry.meters.file.json=",
        "-Didea.disable.collect.statistics=true",
        "-Didea.suppress.statistics.report=true",
        # Use Classic UI by default (disable new UI)
        "-Dide.experimental.ui=false",
        # Default theme for new installations is wired via
        # <default-laf light-classic="TermLab Light"
        #              dark-classic="TermLab Dark"/> in
        # TermLabApplicationInfo.xml — LafManagerImpl reads
        # ApplicationInfoEx.defaultClassicDarkLaf on first launch.
        # --- Memory investigation (2026-04-16). Remove after investigation. ---
        # Native Memory Tracking. `detail` gives per-call-site attribution of
        # native allocations; required to separate heap vs. code cache vs.
        # direct buffers vs. thread stacks in NMT summaries.
        "-XX:NativeMemoryTracking=detail",
        # Dump heap on OOM so we catch runaway growth in the artifact dir
        # rather than losing it to process kill.
        "-XX:+HeapDumpOnOutOfMemoryError",
        "-XX:HeapDumpPath=/Users/dustin/projects/conch_workbench/docs/memory-investigation/2026-04-16/dumps/",
        # GC log: tagged, time-stamped, rotated once at 50 MB. Read
        # post-hoc to distinguish \"heap genuinely grew\" from \"GC was lazy\".
        "-Xlog:gc*,gc+heap=debug,gc+metaspace=debug:file=/Users/dustin/projects/conch_workbench/docs/memory-investigation/2026-04-16/gc/gc.log:time,uptime,tags:filecount=1,filesize=50M",
        # Allow JFR to be started via jcmd without restarting (already on
        # in JDK 25 by default, but set explicitly for reproducibility).
        "-XX:+FlightRecorder",
        # Keep the current -Xmx1024m cap so "1-1.2 GB" growth reproduces.
        # Do NOT raise the heap cap during investigation — we want the
        # known bad behavior.
        # --- end memory investigation ---
    ],
)
