load("@rules_jvm//:jvm.bzl", "jvm_library", "resourcegroup")

resourcegroup(
    name = "core_resources",
    srcs = glob(["resources/**/*"]),
    strip_prefix = "resources",
)

jvm_library(
    name = "core",
    module_name = "intellij.conch.core",
    visibility = ["//visibility:public"],
    srcs = glob(["src/**/*.java"]),
    resources = [":core_resources"],
    deps = [
        "//conch/sdk",
        "//platform/core-api:core",
        "//platform/analysis-api:analysis",
        "//platform/platform-api:ide",
        "//platform/ide-core",
        "//platform/ide-core-impl",
        "//platform/core-ui",
        "//platform/platform-impl:ide-impl",
        "//platform/platform-util-io:ide-util-io",
        "//platform/lang-api:lang",
        "//platform/lang-impl",
        "//platform/editor-ui-api:editor-ui",
        "//platform/project-frame",
        "//platform/projectModel-api:projectModel",
        "//platform/util:util-ui",
        "//libraries/jediterm-core:jediterm-core",
        "//libraries/jediterm-ui:jediterm-ui",
        "//libraries/pty4j",
        "@lib//:jetbrains-annotations",
        "@lib//:gson",
        "@lib//:kotlin-stdlib",
    ],
)
