load("@rules_java//java:defs.bzl", "java_binary")
load("@rules_jvm//:jvm.bzl", "jvm_library", "resourcegroup")

resourcegroup(
    name = "core_resources",
    srcs = glob(["resources/**/*"]),
    strip_prefix = "resources",
)

jvm_library(
    name = "core",
    module_name = "intellij.termlab.core",
    visibility = ["//visibility:public"],
    srcs = glob(["src/**/*.java", "src/**/*.kt"]),
    resources = [":core_resources"],
    deps = [
        "//termlab/sdk",
        "//platform/core-api:core",
        "//platform/analysis-api:analysis",
        "//platform/platform-api:ide",
        "//platform/ide-core",
        "//platform/ide-core-impl",
        "//platform/core-ui",
        "//platform/platform-impl:ide-impl",
        "//platform/core-impl",
        "//platform/platform-util-io:ide-util-io",
        "//platform/lang-api:lang",
        "//platform/lang-impl",
        "//platform/editor-ui-api:editor-ui",
        "//platform/project-frame",
        "//platform/projectModel-api:projectModel",
        "//platform/welcome-screen",
        "//platform/util:util-ui",
        "//libraries/jediterm-core:jediterm-core",
        "//libraries/jediterm-ui:jediterm-ui",
        "//libraries/pty4j",
        "@lib//:jetbrains-annotations",
        "@lib//:gson",
        "@lib//:kotlin-stdlib",
    ],
)

jvm_library(
    name = "core_test_lib",
    module_name = "intellij.termlab.core.tests",
    visibility = ["//visibility:public"],
    srcs = glob(["test/**/*.java"], allow_empty = True),
    deps = [
        ":core",
        "//termlab/sdk",
        "//libraries/jediterm-core:jediterm-core",
        "//libraries/jediterm-ui:jediterm-ui",
        "//libraries/junit5",
        "//libraries/junit5-jupiter",
        "//libraries/junit5-launcher",
        "@lib//:jetbrains-annotations",
        "@lib//:kotlin-stdlib",
    ],
)

java_binary(
    name = "core_test_runner",
    main_class = "com.termlab.core.TestRunner",
    runtime_deps = [
        ":core_test_lib",
        "//libraries/junit5-jupiter",
        "//libraries/junit5-launcher",
    ],
)

exports_files(["intellij.termlab.core.iml"], visibility = ["//visibility:public"])
