load("@rules_jvm//:jvm.bzl", "jvm_library", "resourcegroup")

resourcegroup(
    name = "customization_resources",
    srcs = glob(["resources/**/*"]),
    strip_prefix = "resources",
)

jvm_library(
    name = "customization",
    module_name = "intellij.termlab.customization",
    visibility = ["//visibility:public"],
    srcs = glob(["src/**/*.java"], allow_empty = True),
    resources = [":customization_resources"],
    deps = [
        "//platform/platform-api:ide",
        "@lib//:jetbrains-annotations",
    ],
)

exports_files(["intellij.termlab.customization.iml"], visibility = ["//visibility:public"])
