load("@rules_jvm//:jvm.bzl", "jvm_library")

jvm_library(
    name = "sdk",
    module_name = "intellij.termlab.sdk",
    visibility = ["//visibility:public"],
    srcs = glob(["src/**/*.java"]),
    deps = [
        "//libraries/jediterm-core:jediterm-core",
        "@lib//:jetbrains-annotations",
    ],
)

exports_files(["intellij.termlab.sdk.iml"], visibility = ["//visibility:public"])
