load("@rules_java//java:defs.bzl", "java_binary")
load("@rules_jvm//:jvm.bzl", "jvm_library", "resourcegroup")

resourcegroup(
    name = "editor_resources",
    srcs = glob(["resources/**/*"]),
    strip_prefix = "resources",
)

jvm_library(
    name = "editor",
    module_name = "intellij.conch.editor",
    visibility = ["//visibility:public"],
    srcs = glob(["src/**/*.java"], allow_empty = True),
    resources = [":editor_resources"],
    deps = [
        "//conch/sdk",
        "//conch/core",
        "//conch/plugins/sftp",
        "//conch/plugins/sftp/libs:sshd_sftp",
        "//conch/plugins/ssh",
        "//platform/analysis-api:analysis",
        "//platform/core-api:core",
        "//platform/core-ui",
        "//platform/editor-ui-api:editor-ui",
        "//platform/ide-core",
        "//platform/lang-api:lang",
        "//platform/lang-impl:lang-impl",
        "//platform/platform-api:ide",
        "//platform/core-impl:core-impl",
        "//platform/platform-impl:ide-impl",
        "//platform/projectModel-api:projectModel",
        "//platform/util:util-ui",
        "@lib//:jetbrains-annotations",
        "@lib//:kotlin-stdlib",
    ],
)

jvm_library(
    name = "editor_test_lib",
    module_name = "intellij.conch.editor.tests",
    visibility = ["//visibility:public"],
    srcs = glob(["test/**/*.java"], allow_empty = True),
    deps = [
        ":editor",
        "//conch/sdk",
        "//libraries/junit5",
        "//libraries/junit5-jupiter",
        "//libraries/junit5-launcher",
        "//platform/core-api:core",
        "//platform/util",
        "@lib//:jetbrains-annotations",
        "@lib//:kotlin-stdlib",
    ],
)

java_binary(
    name = "editor_test_runner",
    main_class = "com.conch.editor.TestRunner",
    runtime_deps = [
        ":editor_test_lib",
        "//libraries/junit5-jupiter",
        "//libraries/junit5-launcher",
    ],
)

exports_files(["intellij.conch.editor.iml"], visibility = ["//visibility:public"])
